--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -16,8 +19,10 @@
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-next-on-pages": "^1.13.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
