modified the the vercel build for optimized build for clod flare pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pages:build": "npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev",
     "deploy": "npm run pages:build && wrangler pages deploy",
-    "vercel-build": "next build"
+    "vercel-build": "next build --no-lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
