--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^4.0.1-alpha.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.5",
