--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@vercel/fun": "^1.1.1",
+    "@vercel/node": "^2.10.3",
+    "@vercel/redwood": "^0.6.0",
+    "@vercel/static-build": "^1.2.1",
+    "debug": "^4.3.7",
     "next": "^14.2.15",
+    "path-to-regexp": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
-    "resend": "^4.0.1-alpha.0"
+    "resend": "^4.0.1-alpha.0",
+    "semver": "^7.6.3",
+    "tar": "^7.4.3",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.5",
@@ -27,5 +36,8 @@
     "eslint-plugin-next-on-pages": "^1.13.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
