--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@vercel/redwood": "^0.6.0",
     "@vercel/static-build": "^1.2.1",
     "debug": "^4.3.7",
+    "framer-motion": "^11.11.11",
     "next": "^14.2.15",
     "path-to-regexp": "^8.2.0",
     "react": "^18.3.1",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
     "resend": "^4.0.1-alpha.0",
