--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,7 @@
     "next/core-web-vitals",
     "plugin:eslint-plugin-next-on-pages/recommended"
   ],
-  "plugins": [
-    "eslint-plugin-next-on-pages"
-  ]
-}
-{
+  "plugins": ["eslint-plugin-next-on-pages"],
   "rules": {
     "react/no-unescaped-entities": "off"
   }
