--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predeploy": "rm -rf .next/cache",
-    "deploy": "npm run predeploy && npx @cloudflare/next-on-pages@1",
+    "predeploy": "rimraf .next/cache",
+    "build": "npm run predeploy && next build",
+    "deploy": "npm run build && npx @cloudflare/next-on-pages@1",
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
     "lint": "next lint",
     "pages:build": "npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev",
@@ -15,10 +15,6 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@vercel/fun": "^1.1.1",
-    "@vercel/node": "^2.10.3",
-    "@vercel/redwood": "^0.6.0",
-    "@vercel/static-build": "^1.2.1",
     "debug": "^4.3.7",
     "framer-motion": "^11.11.11",
     "next": "^14.2.15",
@@ -29,6 +25,7 @@
     "react-type-animation": "^3.2.0",
     "resend": "^4.0.1-alpha.0",
     "semver": "^7.6.3",
+    "sharp": "^0.33.5",
     "tar": "^7.4.3",
     "vercel": "^32.3.0"
   },
@@ -38,7 +35,8 @@
     "eslint-config-next": "14.2.15",
     "eslint-plugin-next-on-pages": "^1.13.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.14"
   },
   "engines": {
     "node": ">=18.18.0"
